Adjust CSS to avoid overflow on mobile Chrome

--- a/app/javascript/bundles/components/ProfileEditForm.module.css
+++ b/app/javascript/bundles/components/ProfileEditForm.module.css
@@ -4,6 +4,8 @@
   background-color: white;
 
   display:flex;
+  max-height: 100%;
+  overflow-y: auto;
 
   box-shadow: var(--shadow);
   gap: 1.5vw;
@@ -14,8 +16,6 @@
   padding: 0.5vw;
   margin-left: auto;
   margin-right: auto;
-
-  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -44,7 +44,6 @@
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.15s;
-  
 }
 
 .profilePictureContainer > label:hover {
@@ -57,6 +56,8 @@
 
 .profilePictureContainer > input {
   opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .profileCardTextInfoContainer {
@@ -76,7 +77,7 @@
   justify-content: center;
   min-height: 0; 
 
-  width: clamp(250px, 30vw, 50vw);
+  width: 30vw;
   overflow: hidden;
 }
 
@@ -123,18 +124,15 @@
   .profileEditFormCard {
     padding: 15px;
     flex-direction: column;
-    gap: 15px;
+    gap: 0;
   }
 
   .profilePictureContainer {
     gap: 15px;
   }
 
-  .profileCardTextInfoContainer{
-    overflow:hidden;
-  }
-
   .profileCardTextFieldsContainer {
+    width:  100%;
     align-items: center;
     text-align: center;
   }
